yozuk-shell: render JSON outputs which has +json in its mediatype as YAML

--- a/adapters/shell/Cargo.toml
+++ b/adapters/shell/Cargo.toml
@@ -23,6 +23,8 @@ yozuk-bundle = { path = "../../yozuk-bundle" }
 shell-words = "1.1.0"
 copypasta = "0.7.1"
 toml = "0.5.8"
+mediatype = "0.19.1"
+serde_yaml = "0.8.23"
 
 [features]
 default = []
