--- a/adapters/telegram/Cargo.toml
+++ b/adapters/telegram/Cargo.toml
@@ -12,6 +12,8 @@ mediatype = "0.19.1"
 new_mime_guess = "4.0.1"
 pretty_env_logger = "0.4.0"
 reqwest = "0.11.9"
+serde_json = "1.0.79"
+serde_yaml = "0.8.23"
 shell-words = "1.1.0"
 slog = "2.7.0"
 sloggers = "2.1.1"
