workflow: ignore specific files from the push trigger

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,6 +3,10 @@ name: Rust
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+    - '**.md'
+    - '**/Dockerfile'
+    - 'images/**'
   pull_request:
     branches: [ main ]
 
