--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -39,6 +39,7 @@ yozuk-skill-version = { path = "../skills/version", optional = true }
 yozuk-skill-lipsum = { path = "../skills/lipsum", optional = true }
 yozuk-skill-nanoid = { path = "../skills/nanoid", optional = true }
 yozuk-skill-punycode = { path = "../skills/punycode", optional = true }
+yozuk-skill-dice = { path = "../skills/dice", optional = true }
 
 [features]
 default = [
@@ -56,7 +57,8 @@ default-skills = [
     "yozuk-skill-uuid",
     "yozuk-skill-lipsum",
     "yozuk-skill-nanoid",
-    "yozuk-skill-punycode"
+    "yozuk-skill-punycode",
+    "yozuk-skill-dice"
 ]
 
 [build-dependencies]
