--- a/skills/digest/Cargo.toml
+++ b/skills/digest/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.1.6", features = ["derive"] }
 digest = "0.10.3"
+hex = "0.4.3"
 lipsum = "0.8.0"
 md-5 = "0.10.1"
 mediatype = "0.19.1"
