--- a/skills/digest/Cargo.toml
+++ b/skills/digest/Cargo.toml
@@ -11,6 +11,7 @@ md-5 = "0.10.1"
 mediatype = "0.19.1"
 sha1 = "0.10.1"
 sha2 = "0.10.2"
+sha3 = "0.10.1"
 thiserror = "1.0.30"
 yozuk-helper-english = { path = "../../helpers/english" }
 yozuk-sdk = { path = "../../yozuk-sdk" }
