yozuk-telegram: support photos as inputs

--- a/adapters/telegram/Cargo.toml
+++ b/adapters/telegram/Cargo.toml
@@ -18,6 +18,7 @@ shell-words = "1.1.0"
 slog = "2.7.0"
 sloggers = "2.1.1"
 teloxide = "0.7.1"
+tempfile = "3.3.0"
 tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
 tokio-stream = "0.1.8"
 toml = "0.5.8"
