--- a/yozuk-bundle/Cargo.toml
+++ b/yozuk-bundle/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [build-dependencies]
 anyhow = "1.0.56"
 yozuk = { path = "../yozuk", features = ["modelgen"] }
-yozuk-sdk = { path = "../yozuk-sdk", features = ["modelgen"] }
+yozuk-sdk = { path = "../yozuk-sdk" }
