--- a/adapters/zuk/Cargo.toml
+++ b/adapters/zuk/Cargo.toml
@@ -23,6 +23,8 @@ mediatype = "0.19.1"
 serde_yaml = "0.8.23"
 rustyline = "9.1.2"
 crossterm = "0.23.1"
+serde_derive = "1.0.136"
+serde = "1.0.136"
 
 [features]
 default = []
