--- a/adapters/zuk/Cargo.toml
+++ b/adapters/zuk/Cargo.toml
@@ -24,6 +24,9 @@ rustyline = "9.1.2"
 crossterm = "0.23.1"
 serde_derive = "1.0.136"
 serde = "1.0.136"
+warp = { version = "0.3.2", optional = true }
+tokio = { version = "1.17.0", optional = true }
 
 [features]
 default = []
+server = ["warp", "tokio"]
