--- a/adapters/zuk/Cargo.toml
+++ b/adapters/zuk/Cargo.toml
@@ -26,7 +26,8 @@ serde_derive = "1.0.136"
 serde = "1.0.136"
 warp = { version = "0.3.2", optional = true }
 tokio = { version = "1.17.0", optional = true }
+futures-util = { version = "0.3.21", optional = true }
 
 [features]
 default = []
-server = ["warp", "tokio"]
+server = ["warp", "tokio", "futures-util"]
