--- a/skills/dice/Cargo.toml
+++ b/skills/dice/Cargo.toml
@@ -14,3 +14,4 @@ serde_derive = "1.0.136"
 serde_json = "1.0.79"
 thiserror = "1.0.30"
 yozuk-sdk = { path = "../../yozuk-sdk" }
+yozuk-helper-english = { path = "../../helpers/english" }
