--- a/skills/digest/Cargo.toml
+++ b/skills/digest/Cargo.toml
@@ -15,6 +15,7 @@ ripemd = "0.1.1"
 sha1 = "0.10.1"
 sha2 = "0.10.2"
 sha3 = "0.10.1"
+shabal = "0.4.1"
 thiserror = "1.0.30"
 yozuk-helper-english = { path = "../../helpers/english" }
 yozuk-sdk = { path = "../../yozuk-sdk" }
