--- a/yozuk-sdk/Cargo.toml
+++ b/yozuk-sdk/Cargo.toml
@@ -2,6 +2,15 @@
 name = "yozuk-sdk"
 version = "0.1.0"
 edition = "2021"
+authors = ["picoHz <picoHz@outlook.com>"]
+description = "Types used in the Yozuk ecosystem"
+keywords = ["yozuk"]
+categories = ["text-processing"]
+repository = "https://github.com/yozuk/yozuk/yozuk-sdk"
+homepage = "https://yozuk.com"
+documentation = "https://docs.rs/yozuk-sdk"
+license = "MIT"
+readme = "README.md"
 
 [dependencies]
 anyhow = "1.0.56"
