--- a/adapters/telegram/Cargo.toml
+++ b/adapters/telegram/Cargo.toml
@@ -26,4 +26,4 @@ tree_magic = "0.2.3"
 warp = "0.3.2"
 yozuk = { path = "../../yozuk" }
 yozuk-bundle = { path = "../../yozuk-bundle" }
-yozuk-sdk = { path = "../../yozuk-sdk" }
+yozuk-sdk = "0.1.0"
