--- a/adapters/zuk/Cargo.toml
+++ b/adapters/zuk/Cargo.toml
@@ -14,7 +14,7 @@ serde_json = "1.0.79"
 sloggers = "2.1.1"
 termimad = "0.20.0"
 yozuk = { path = "../../yozuk" }
-yozuk-sdk = { path = "../../yozuk-sdk" }
+yozuk-sdk = "0.1.0"
 yozuk-bundle = { path = "../../yozuk-bundle" }
 shell-words = "1.1.0"
 toml = "0.5.8"
