--- a/skills/base64/Cargo.toml
+++ b/skills/base64/Cargo.toml
@@ -11,4 +11,4 @@ itertools = "0.10.3"
 mediatype = "0.19.1"
 tree_magic = "0.2.3"
 yozuk-helper-english = { path = "../../helpers/english" }
-yozuk-sdk = { path = "../../yozuk-sdk" }
+yozuk-sdk = "0.1.0"
