--- a/skills/calc/Cargo.toml
+++ b/skills/calc/Cargo.toml
@@ -10,4 +10,4 @@ mediatype = "0.19.1"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 thiserror = "1.0.30"
-yozuk-sdk = { path = "../../yozuk-sdk" }
+yozuk-sdk = "0.1.0"
