--- a/skills/digest/Cargo.toml
+++ b/skills/digest/Cargo.toml
@@ -20,4 +20,4 @@ thiserror = "1.0.30"
 tiger = "0.2.1"
 whirlpool = "0.10.1"
 yozuk-helper-english = { path = "../../helpers/english" }
-yozuk-sdk = { path = "../../yozuk-sdk" }
+yozuk-sdk = "0.1.0"
