--- a/skills/punycode/Cargo.toml
+++ b/skills/punycode/Cargo.toml
@@ -8,4 +8,4 @@ clap = { version = "3.1.6", features = ["derive"] }
 mediatype = "0.19.1"
 punycode = "0.4.1"
 yozuk-helper-english = { path = "../../helpers/english" }
-yozuk-sdk = { path = "../../yozuk-sdk" }
+yozuk-sdk = "0.1.0"
