--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -27,7 +27,7 @@ sloggers = "2.1.1"
 thiserror = "1.0.30"
 mediatype = "0.19.1"
 yozuk-helper-english = { path = "../helpers/english" }
-yozuk-sdk = { path = "../yozuk-sdk" }
+yozuk-sdk = "0.1.0"
 
 yozuk-skill-base64 = { path = "../skills/base64", optional = true }
 yozuk-skill-calc = { path = "../skills/calc", optional = true }
