replace all path dependencies with git dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,21 @@ strip = true
 
 [patch.crates-io]
 yozuk-sdk = { path = "./yozuk-sdk" }
+
+[patch."https://github.com/yozuk/yozuk"]
+yozuk = { path = "./yozuk" }
+yozuk-bundle = { path = "./yozuk-bundle" }
+yozuk-helper-english = { path = "./helpers/english" }
+yozuk-skill-base64 = { path = "./skills/base64" }
+yozuk-skill-calc = { path = "./skills/calc" }
+yozuk-skill-english = { path = "./skills/english" }
+yozuk-skill-mediatype =  { path = "./skills/mediatype" }
+yozuk-skill-numeric = { path = "./skills/numeric" }
+yozuk-skill-smalltalk = { path = "./skills/smalltalk" }
+yozuk-skill-uuid = { path = "./skills/uuid" }
+yozuk-skill-version = { path = "./skills/version" }
+yozuk-skill-lipsum = { path = "./skills/lipsum" }
+yozuk-skill-nanoid = { path = "./skills/nanoid" }
+yozuk-skill-punycode = { path = "./skills/punycode" }
+yozuk-skill-dice = { path = "./skills/dice" }
+yozuk-skill-digest = { path = "./skills/digest" }
