--- a/adapters/zuk/Cargo.toml
+++ b/adapters/zuk/Cargo.toml
@@ -13,9 +13,9 @@ hexyl = "0.9.0"
 serde_json = "1.0.79"
 sloggers = "2.1.1"
 termimad = "0.20.0"
-yozuk = { path = "../../yozuk" }
+yozuk = { git = "https://github.com/yozuk/yozuk", tag = "v0.2.0" }
 yozuk-sdk = "0.1.0"
-yozuk-bundle = { path = "../../yozuk-bundle" }
+yozuk-bundle = { git = "https://github.com/yozuk/yozuk", tag = "v0.2.0" }
 shell-words = "1.1.0"
 toml = "0.5.8"
 mediatype = "0.19.1"
