--- a/adapters/zuk/Cargo.toml
+++ b/adapters/zuk/Cargo.toml
@@ -27,6 +27,7 @@ serde = "1.0.136"
 warp = { version = "0.3.2", optional = true }
 tokio = { version = "1.17.0", optional = true }
 futures-util = { version = "0.3.21", optional = true }
+rustyline-derive = "0.6.0"
 
 [features]
 default = []
