--- a/skills/english/Cargo.toml
+++ b/skills/english/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 rayon = "1.5.1"
-yozuk-helper-english = { path = "../../helpers/english" }
+yozuk-helper-english = "0.1.0"
 yozuk-sdk = "0.1.0"
