--- a/skills/punycode/Cargo.toml
+++ b/skills/punycode/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 clap = { version = "3.1.6", features = ["derive"] }
 mediatype = "0.19.1"
 punycode = "0.4.1"
-yozuk-helper-english = { path = "../../helpers/english" }
+yozuk-helper-english = "0.1.0"
 yozuk-sdk = "0.1.0"
