--- a/skills/dice/Cargo.toml
+++ b/skills/dice/Cargo.toml
@@ -14,4 +14,4 @@ serde_derive = "1.0.136"
 serde_json = "1.0.79"
 thiserror = "1.0.30"
 yozuk-sdk = "0.1.0"
-yozuk-helper-english = { path = "../../helpers/english" }
+yozuk-helper-english = "0.1.0"
