--- a/skills/lipsum/Cargo.toml
+++ b/skills/lipsum/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 clap = { version = "3.1.6", features = ["derive"] }
 lipsum = "0.8.0"
 mediatype = "0.19.1"
-yozuk-helper-english = { path = "../../helpers/english" }
+yozuk-helper-english = "0.1.0"
 yozuk-sdk = "0.1.0"
 serde = "1.0.136"
 serde_derive = "1.0.136"
