--- a/skills/nanoid/Cargo.toml
+++ b/skills/nanoid/Cargo.toml
@@ -8,5 +8,5 @@ clap = { version = "3.1.5", features = ["derive"] }
 itertools = "0.10.3"
 mediatype = "0.19.1"
 nanoid = "0.4.0"
-yozuk-helper-english = { path = "../../helpers/english" }
+yozuk-helper-english = "0.1.0"
 yozuk-sdk = "0.1.0"
