--- a/skills/uuid/Cargo.toml
+++ b/skills/uuid/Cargo.toml
@@ -8,5 +8,5 @@ clap = { version = "3.1.6", features = ["derive"] }
 itertools = "0.10.3"
 mediatype = "0.19.1"
 uuid = { version = "0.8.2", features = ["v4"] }
-yozuk-helper-english = { path = "../../helpers/english" }
+yozuk-helper-english = "0.1.0"
 yozuk-sdk = "0.1.0"
