--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -27,7 +27,7 @@ sloggers = "2.1.1"
 thiserror = "1.0.30"
 mediatype = "0.19.1"
 yozuk-sdk = "0.1.0"
-yozuk-helper-english = { git = "https://github.com/yozuk/yozuk", tag = "v0.3.0" }
+yozuk-helper-english = "0.1.0"
 
 yozuk-skill-base64 = { git = "https://github.com/yozuk/yozuk", tag = "v0.3.0", optional = true }
 yozuk-skill-calc = { git = "https://github.com/yozuk/yozuk", tag = "v0.3.0", optional = true }
