--- a/adapters/zuk/Cargo.toml
+++ b/adapters/zuk/Cargo.toml
@@ -13,7 +13,7 @@ hexyl = "0.9.0"
 serde_json = "1.0.79"
 sloggers = "2.1.1"
 termimad = "0.20.0"
-yozuk = { git = "https://github.com/yozuk/yozuk", tag = "v0.3.0" }
+yozuk = "0.4.0"
 yozuk-sdk = "0.1.0"
 yozuk-bundle = { git = "https://github.com/yozuk/yozuk", tag = "v0.3.0" }
 shell-words = "1.1.0"
