--- a/yozuk-bundle/Cargo.toml
+++ b/yozuk-bundle/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [build-dependencies]
 anyhow = "1.0.56"
-yozuk = { git = "https://github.com/yozuk/yozuk", tag = "v0.3.0", features = ["modelgen"] }
+yozuk = { version = "0.4.0", features = ["modelgen"] }
 yozuk-sdk = "0.1.0"
