--- a/adapters/zuk/Cargo.toml
+++ b/adapters/zuk/Cargo.toml
@@ -15,7 +15,7 @@ sloggers = "2.1.1"
 termimad = "0.20.0"
 yozuk = "0.4.0"
 yozuk-sdk = "0.1.0"
-yozuk-bundle = { git = "https://github.com/yozuk/yozuk", tag = "v0.3.0" }
+yozuk-bundle = "0.4.0"
 shell-words = "1.1.0"
 toml = "0.5.8"
 mediatype = "0.19.1"
