--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -43,6 +43,8 @@ md-5 = { version = "0.10.1", optional = true }
 sha1 = { version = "0.10.1", optional = true }
 sha2 = { version = "0.10.2", optional = true }
 sha3 = { version = "0.10.1", optional = true }
+css-color = { version = "0.2.4", optional = true }
+palette = { version = "0.6.0", optional = true }
 
 [features]
 default = [
@@ -58,7 +60,8 @@ default = [
     "yozuk-skill-nanoid",
     "yozuk-skill-punycode",
     "yozuk-skill-dice",
-    "yozuk-skill-digest"
+    "yozuk-skill-digest",
+    "yozuk-skill-color"
 ]
 yozuk-skill-mediatype = []
 yozuk-skill-version = []
@@ -80,3 +83,4 @@ yozuk-skill-digest = [
     "sha2",
     "sha3",
 ]
+yozuk-skill-color = ["css-color", "palette"]
