--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -45,6 +45,7 @@ sha2 = { version = "0.10.2", optional = true }
 sha3 = { version = "0.10.1", optional = true }
 css-color = { version = "0.2.4", optional = true }
 palette = { version = "0.6.0", optional = true }
+crc_all = { version = "0.2.0", optional = true }
 
 [features]
 default = [
@@ -82,5 +83,6 @@ yozuk-skill-digest = [
     "sha1",
     "sha2",
     "sha3",
+    "crc_all"
 ]
 yozuk-skill-color = ["css-color", "palette"]
