--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -56,7 +56,8 @@ default-skills = [
     "yozuk-skill-punycode",
     "yozuk-skill-dice",
     "yozuk-skill-digest",
-    "yozuk-skill-color"
+    "yozuk-skill-color",
+    "yozuk-skill-time"
 ]
 yozuk-skill-mediatype = ["yozuk-core-skillset/yozuk-skill-mediatype"]
 yozuk-skill-version = ["yozuk-core-skillset/yozuk-skill-version"]
@@ -72,6 +73,7 @@ yozuk-skill-dice = ["yozuk-core-skillset/yozuk-skill-dice"]
 yozuk-skill-digest = ["yozuk-core-skillset/yozuk-skill-digest"]
 yozuk-skill-smalltalk = ["yozuk-core-skillset/yozuk-skill-smalltalk"]
 yozuk-skill-color = ["yozuk-core-skillset/yozuk-skill-color"]
+yozuk-skill-time = ["yozuk-core-skillset/yozuk-skill-time"]
 
 [dev-dependencies]
 lazy_static = "1.4.0"
