--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -47,6 +47,7 @@ css-color = { version = "0.2.4", optional = true }
 palette = { version = "0.6.0", optional = true }
 crc_all = { version = "0.2.0", optional = true }
 chrono = { version = "0.4.19", optional = true }
+num-bigint = { version = "0.4", optional = true }
 
 [features]
 default = [
@@ -64,7 +65,8 @@ default = [
     "yozuk-skill-dice",
     "yozuk-skill-digest",
     "yozuk-skill-color",
-    "yozuk-skill-time"
+    "yozuk-skill-time",
+    "yozuk-skill-unit"
 ]
 yozuk-skill-mediatype = []
 yozuk-skill-version = []
@@ -89,3 +91,4 @@ yozuk-skill-digest = [
 ]
 yozuk-skill-color = ["css-color", "palette"]
 yozuk-skill-time = ["chrono"]
+yozuk-skill-unit = ["bigdecimal", "num-bigint"]
