workflow: release model data

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,12 +28,18 @@ jobs:
           key: ${{ runner.os }}-stable-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Build project
         run: cargo b --bin zuk --release
+      - name: Dump model data
+        run: target/release/zuk --dump-model model.data
+        if: ${{ matrix.os == 'ubuntu-latest' }}
       - name: Make archive
-        run: mv target/release/zuk . && tar -czvf zuk-${{ github.ref_name }}-${{ runner.arch }}-${{ runner.os }}.tar.gz zuk
+        run: tar -C target/release -czvf zuk-${{ github.ref_name }}-${{ runner.arch }}-${{ runner.os }}.tar.gz zuk
         if: ${{ matrix.os != 'windows-latest' }}
       - name: Make archive
-        run: move target\release\zuk.exe . && tar -a -c -f zuk-${{ github.ref_name }}-${{ runner.arch }}-${{ runner.os }}.zip zuk.exe
+        run: tar -C target/release -a -c -f zuk-${{ github.ref_name }}-${{ runner.arch }}-${{ runner.os }}.zip zuk.exe
         if: ${{ matrix.os == 'windows-latest' }}
+      - name: Make model archive
+        run: gzip model.data -c > model-${{ github.ref_name }}.gz
+        if: ${{ matrix.os == 'ubuntu-latest' }}
       - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -42,7 +48,7 @@ jobs:
       - name: Upload archive
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ github.ref_name }} zuk-*.tar.gz
+        run: gh release upload ${{ github.ref_name }} *.gz
         if: ${{ matrix.os != 'windows-latest' }}
       - name: Upload archive
         env:
