--- a/yozuk-sdk/Cargo.toml
+++ b/yozuk-sdk/Cargo.toml
@@ -20,7 +20,7 @@ bytes = { version = "1.1.0", features = ["serde"] }
 clap = { version = "3.1.6", features = ["derive"] }
 entropy = "0.4.1"
 itertools = "0.10.3"
-jsonschema = "0.15.0"
+jsonschema-valid = "0.4.0"
 mediatype = { version = "0.19.1", features = ["serde"] }
 serde = "1.0.136"
 serde_derive = "1.0.136"
