--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -34,7 +34,7 @@ crossterm = "0.23.1"
 serde_derive = "1.0.136"
 serde = "1.0.136"
 warp = { version = "0.3.2", optional = true }
-tokio = { version = "1.17.0", optional = true }
+tokio = { version = "1.17.0", features = ["rt-multi-thread"], optional = true }
 futures-util = { version = "0.3.21", optional = true }
 rustyline-derive = "0.6.0"
 
