fix old zuk path

--- a/zuk/Cargo.toml
+++ b/zuk/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["picoHz <picoHz@outlook.com>"]
 description = "Yozuk command-line interface"
 keywords = ["yozuk"]
 categories = ["command-line-utilities", "development-tools", "text-processing"]
-repository = "https://github.com/yozuk/yozuk/adapters/zuk"
+repository = "https://github.com/yozuk/yozuk/zuk"
 homepage = "https://yozuk.com"
 documentation = "https://docs.rs/zuk"
 license = "MIT"
