--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -49,6 +49,7 @@ palette = { version = "0.6.0", optional = true }
 crc_all = { version = "0.2.0", optional = true }
 chrono = { version = "0.4.19", optional = true }
 num-bigint = { version = "0.4", optional = true }
+fuzzydate = { version = "0.1.5", optional = true }
 
 [features]
 default = [
@@ -91,5 +92,5 @@ yozuk-skill-digest = [
     "crc_all"
 ]
 yozuk-skill-color = ["css-color", "palette"]
-yozuk-skill-time = ["chrono"]
+yozuk-skill-time = ["chrono", "fuzzydate"]
 yozuk-skill-unit = ["bigdecimal", "num-bigint"]
