--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -50,6 +50,7 @@ crc_all = { version = "0.2.0", optional = true }
 chrono = { version = "0.4.19", optional = true }
 num-bigint = { version = "0.4", optional = true }
 fuzzydate = { version = "0.1.5", optional = true }
+chrono-tz = { version = "0.6.1", optional = true }
 
 [features]
 default = [
@@ -92,5 +93,5 @@ yozuk-skill-digest = [
     "crc_all"
 ]
 yozuk-skill-color = ["css-color", "palette"]
-yozuk-skill-time = ["chrono", "fuzzydate"]
+yozuk-skill-time = ["chrono", "fuzzydate", "chrono-tz"]
 yozuk-skill-unit = ["bigdecimal", "num-bigint"]
