--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -27,6 +27,7 @@ const-sha1 = "0.2.0"
 yozuk-helper-english = "0.1.0"
 yozuk-helper-preprocessor = "0.1.0"
 yozuk-sdk = "0.3.0"
+strum = { version = "0.24.0", features = ["derive"] }
 
 rand = { version = "0.8.5", features = ["small_rng"], optional = true }
 chardetng = { version = "0.1.17", optional = true }
