--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -31,7 +31,6 @@ strum = { version = "0.24.0", features = ["derive"] }
 
 rand = { version = "0.8.5", features = ["small_rng"], optional = true }
 chardetng = { version = "0.1.17", optional = true }
-tree_magic = { version = "0.2.3", optional = true }
 pest = { version = "2.1.3", optional = true }
 pest_derive = { version = "2.1.0", optional = true }
 digest = { version = "0.10.3", optional = true }
@@ -74,7 +73,7 @@ default = [
 ]
 yozuk-skill-mediatype = []
 yozuk-skill-version = []
-yozuk-skill-base64 = ["chardetng", "tree_magic"]
+yozuk-skill-base64 = ["chardetng"]
 yozuk-skill-english = []
 yozuk-skill-smalltalk = []
 yozuk-skill-numeric = []
