--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,11 +22,12 @@ jobs:
     - uses: actions/cache@v2
       with:
         path: |
-          ~/.rustup/toolchains/stable-*
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-stable-cargo-${{ hashFiles('**/Cargo.lock') }}
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-stable-cargo
     - uses: extractions/setup-just@v1
     - name: Run checks
       run: just check
