--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -24,7 +24,7 @@ distance = "0.4.0"
 nanoid = "0.4.0"
 num_cpus = "1.13.1"
 punycode = "0.4.1"
-rayon = "1.5.1"
+rayon = { version = "1.5.1", optional = true }
 serde = "1.0.136"
 serde_derive = "1.0.136"
 serde_json = "1.0.79"
@@ -39,9 +39,10 @@ yozuk-core-skillset = "0.6.0"
 
 [features]
 default = [
-    "default-skills"
+    "default-skills",
+    "rayon"
 ]
-modelgen = ["crfsuite"]
+modelgen = ["crfsuite", "rayon"]
 default-skills = [
     "yozuk-skill-mediatype", 
     "yozuk-skill-version",
