--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -46,7 +46,7 @@ sha3 = { version = "0.10.1", optional = true }
 css-color = { version = "0.2.4", optional = true }
 palette = { version = "0.6.0", optional = true }
 crc_all = { version = "0.2.0", optional = true }
-chrono = { version = "0.4.19", optional = true }
+chrono = { version = "0.4.19", features = ["wasmbind"], optional = true }
 num-bigint = { version = "0.4", optional = true }
 fuzzydate = { version = "0.1.5", optional = true }
 chrono-tz = { version = "0.6.1", optional = true }
