--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -50,6 +50,7 @@ chrono = { version = "0.4.19", features = ["wasmbind"], optional = true }
 num-bigint = { version = "0.4", optional = true }
 fuzzydate = { version = "0.1.5", optional = true }
 chrono-tz = { version = "0.6.1", optional = true }
+open-location-code = { version = "0.1.0", optional = true }
 
 [features]
 default = [
@@ -68,7 +69,8 @@ default = [
     "yozuk-skill-digest",
     "yozuk-skill-color",
     "yozuk-skill-time",
-    "yozuk-skill-unit"
+    "yozuk-skill-unit",
+    "yozuk-skill-geo"
 ]
 yozuk-skill-mediatype = []
 yozuk-skill-version = []
@@ -94,3 +96,4 @@ yozuk-skill-digest = [
 yozuk-skill-color = ["css-color", "palette"]
 yozuk-skill-time = ["chrono", "fuzzydate", "chrono-tz"]
 yozuk-skill-unit = ["bigdecimal", "num-bigint"]
+yozuk-skill-geo = ["open-location-code"]
