--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -26,6 +26,7 @@ const-sha1 = "0.2.0"
 yozuk-helper-english = "0.1.0"
 yozuk-helper-preprocessor = "0.1.0"
 yozuk-sdk = "0.4.0"
+anyhow = "1.0.56"
 strum = { version = "0.24.0", features = ["derive"] }
 
 rand = { version = "0.8.5", features = ["small_rng"], optional = true }
@@ -50,6 +51,7 @@ chrono = { version = "0.4.19", features = ["wasmbind"], optional = true }
 num-bigint = { version = "0.4", optional = true }
 fuzzydate = { version = "0.1.5", optional = true }
 chrono-tz = { version = "0.6.1", optional = true }
+open-location-code = { version = "0.1.0", optional = true }
 
 [features]
 default = [
@@ -68,7 +70,8 @@ default = [
     "yozuk-skill-digest",
     "yozuk-skill-color",
     "yozuk-skill-time",
-    "yozuk-skill-unit"
+    "yozuk-skill-unit",
+    "yozuk-skill-geo"
 ]
 yozuk-skill-mediatype = []
 yozuk-skill-version = []
@@ -94,3 +97,4 @@ yozuk-skill-digest = [
 yozuk-skill-color = ["css-color", "palette"]
 yozuk-skill-time = ["chrono", "fuzzydate", "chrono-tz"]
 yozuk-skill-unit = ["bigdecimal", "num-bigint"]
+yozuk-skill-geo = ["open-location-code"]
