--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -52,6 +52,7 @@ num-bigint = { version = "0.4", optional = true }
 fuzzydate = { version = "0.1.5", optional = true }
 chrono-tz = { version = "0.6.1", optional = true }
 open-location-code = { version = "0.1.0", optional = true }
+blake2 = { version = "0.10.4", optional = true }
 
 [features]
 default = [
@@ -92,7 +93,8 @@ yozuk-skill-digest = [
     "sha1",
     "sha2",
     "sha3",
-    "crc_all"
+    "crc_all", 
+    "blake2"
 ]
 yozuk-skill-color = ["css-color", "palette"]
 yozuk-skill-time = ["chrono", "fuzzydate", "chrono-tz"]
