--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -53,6 +53,7 @@ fuzzydate = { version = "0.1.5", optional = true }
 chrono-tz = { version = "0.6.1", optional = true }
 open-location-code = { version = "0.1.0", optional = true }
 blake2 = { version = "0.10.4", optional = true }
+blake3 = { version = "1.3.1", no-default-features = true, features = ["traits-preview"], optional = true }
 
 [features]
 default = [
@@ -94,7 +95,8 @@ yozuk-skill-digest = [
     "sha2",
     "sha3",
     "crc_all", 
-    "blake2"
+    "blake2",
+    "blake3"
 ]
 yozuk-skill-color = ["css-color", "palette"]
 yozuk-skill-time = ["chrono", "fuzzydate", "chrono-tz"]
