--- a/.github/workflows/cross-compilation.yml
+++ b/.github/workflows/cross-compilation.yml
@@ -29,7 +29,7 @@ jobs:
           ~/.cargo/registry/cache/
           ~/.cargo/git/db/
           target/
-        key: ${{ matrix.toolchain }}-stable-cargo
+        key: ${{ runner.os }}-${{ matrix.toolchain }}-stable-cargo
     - uses: extractions/setup-just@v1
     - name: Install toolchain
       run: rustup target add ${{ matrix.toolchain }}
@@ -51,7 +51,7 @@ jobs:
           ~/.cargo/registry/cache/
           ~/.cargo/git/db/
           target/
-        key: ${{ matrix.toolchain }}-stable-cargo
+        key: ${{ runner.os }}-${{ matrix.toolchain }}-stable-cargo
     - uses: extractions/setup-just@v1
     - name: Install toolchain
       run: rustup target add ${{ matrix.toolchain }}
