--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -53,7 +53,7 @@ fuzzydate = { version = "0.1.5", optional = true }
 chrono-tz = { version = "0.6.1", optional = true }
 open-location-code = { version = "0.1.0", optional = true }
 blake2 = { version = "0.10.4", optional = true }
-blake3 = { version = "1.3.1", no-default-features = true, features = ["traits-preview"], optional = true }
+blake3 = { version = "1.3.1", default-features = false, features = ["traits-preview"], optional = true }
 
 [features]
 default = [
