--- a/yozuk-bundle/Cargo.toml
+++ b/yozuk-bundle/Cargo.toml
@@ -16,3 +16,5 @@ readme = "README.md"
 anyhow = "1.0.56"
 yozuk = { version = "0.9.0", features = ["modelgen"] }
 yozuk-sdk = "0.9.0"
+hex = "0.4.3"
+
