--- a/yozuk-sdk/Cargo.toml
+++ b/yozuk-sdk/Cargo.toml
@@ -15,6 +15,7 @@ readme = "README.md"
 [dependencies]
 anyhow = "1.0.56"
 base64 = "0.13.0"
+bincode = "1.3.3"
 bytes = { version = "1.1.0", features = ["serde"] }
 clap = { version = "3.1.6", features = ["derive"] }
 entropy = "0.4.1"
