--- a/yozuk-sdk/Cargo.toml
+++ b/yozuk-sdk/Cargo.toml
@@ -24,6 +24,7 @@ mediatype = { version = "0.19.2", features = ["serde"] }
 serde = "1.0.136"
 serde_derive = "1.0.136"
 serde_json = "1.0.79"
+serde_yaml = "0.8.23"
 slog = "2.7.0"
 sloggers = "2.1.1"
 
