--- a/yozuk-sdk/Cargo.toml
+++ b/yozuk-sdk/Cargo.toml
@@ -16,6 +16,7 @@ readme = "README.md"
 anyhow = "1.0.56"
 base64 = "0.13.0"
 bincode = "1.3.3"
+blake2 = "0.10.4"
 bytes = { version = "1.1.0", features = ["serde"] }
 entropy = "0.4.1"
 itertools = "0.10.3"
