--- a/yozuk-sdk/Cargo.toml
+++ b/yozuk-sdk/Cargo.toml
@@ -21,6 +21,7 @@ entropy = "0.4.1"
 itertools = "0.10.3"
 jsonschema-valid = "0.4.0"
 mediatype = { version = "0.19.2", features = ["serde"] }
+nanoid = "0.4.0"
 secstr = { version = "0.5.0", features = ["serde"] }
 serde = "1.0.136"
 serde_derive = "1.0.136"
