workflow: change cross-compilation trigger

--- a/.github/workflows/cross-compilation.yml
+++ b/.github/workflows/cross-compilation.yml
@@ -2,11 +2,9 @@ name: Cross-Compilation
 
 on:
   push:
-    branches: [ main ]
-    paths-ignore:
-    - '**.md'
-    - '**/Dockerfile'
-    - 'images/**'
+    paths:
+      - '**.toml'
+      - '**.rs'
   pull_request:
     branches: [ main ]
 
