--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -36,7 +36,7 @@ pest_derive = { version = "2.1.0", optional = true }
 digest = { version = "0.10.3", optional = true }
 lipsum = { version = "0.8.0", optional = true }
 nanoid = { version = "0.4.0", optional = true }
-uuid = { version = "1.0.0-alpha.1", features = ["v4"], optional = true }
+uuid = { version = "1.0.0", features = ["v4"], optional = true }
 bigdecimal = { version = "0.3.0", optional = true }
 punycode = { version = "0.4.1", optional = true }
 hex = { version = "0.4.3", optional = true }
