--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -54,6 +54,7 @@ chrono-tz = { version = "0.6.1", optional = true }
 open-location-code = { version = "0.1.0", optional = true }
 blake2 = { version = "0.10.4", optional = true }
 blake3 = { version = "1.3.1", default-features = false, features = ["traits-preview"], optional = true }
+zxcvbn = { version = "2.2.1", optional = true }
 
 [features]
 default = [
@@ -73,7 +74,8 @@ default = [
     "yozuk-skill-color",
     "yozuk-skill-time",
     "yozuk-skill-unit",
-    "yozuk-skill-geo"
+    "yozuk-skill-geo",
+    "yozuk-skill-password"
 ]
 yozuk-skill-mediatype = []
 yozuk-skill-version = []
@@ -102,3 +104,4 @@ yozuk-skill-color = ["css-color", "palette"]
 yozuk-skill-time = ["chrono", "fuzzydate", "chrono-tz"]
 yozuk-skill-unit = ["bigdecimal", "num-bigint"]
 yozuk-skill-geo = ["open-location-code"]
+yozuk-skill-password = ["rand", "zxcvbn"]
