--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -21,6 +21,7 @@ crfs = "0.2.0"
 crfsuite = { version = "0.3.1", optional = true }
 getrandom = { version = "0.2.5", features = ["js"] }
 distance = "0.4.0"
+entropy = "0.4.1"
 nanoid = "0.4.0"
 num_cpus = "1.13.1"
 punycode = "0.4.1"
