--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -55,7 +55,6 @@ uuid = { version = "1.0.0", features = ["v4"], optional = true }
 yozuk-helper-english = "0.1.0"
 yozuk-helper-preprocessor = "0.11.0"
 yozuk-sdk = "0.11.0"
-zxcvbn = { version = "2.2.1", optional = true }
 
 [features]
 default = ["yozuk-skill-mediatype", "yozuk-skill-version", "yozuk-skill-base64", "yozuk-skill-english", "yozuk-skill-smalltalk", "yozuk-skill-numeric", "yozuk-skill-calc", "yozuk-skill-uuid", "yozuk-skill-lipsum", "yozuk-skill-nanoid", "yozuk-skill-punycode", "yozuk-skill-dice", "yozuk-skill-digest", "yozuk-skill-color", "yozuk-skill-time", "yozuk-skill-unit", "yozuk-skill-geo", "yozuk-skill-password"]
@@ -70,7 +69,7 @@ yozuk-skill-lipsum = ["lipsum"]
 yozuk-skill-mediatype = []
 yozuk-skill-nanoid = ["nanoid"]
 yozuk-skill-numeric = []
-yozuk-skill-password = ["rand", "zxcvbn"]
+yozuk-skill-password = ["rand"]
 yozuk-skill-punycode = ["punycode"]
 yozuk-skill-smalltalk = []
 yozuk-skill-time = ["chrono", "fuzzydate", "chrono-tz"]
